--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.1.RELEASE</version>
+		<version>1.5.2.RELEASE</version>
   </parent>
   
   <modules>
@@ -18,7 +18,7 @@
   </modules>
   
   <properties>
-		<java.version>1.7</java.version>
+		<java.version>1.8</java.version>
 		<druid.version>1.0.28</druid.version>
 		<commons-lang3.version>3.5</commons-lang3.version>
 		<shiro.version>1.2.4</shiro.version>
@@ -27,6 +27,8 @@
 		<UserAgentUtils.version>1.19</UserAgentUtils.version>
 		<joda-time.version>2.9.4</joda-time.version>
 		<jsoup.version>1.9.2</jsoup.version>
+		<lombok.version>1.16.14</lombok.version>
+		<maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
 		
   </properties>
   <dependencies>
@@ -34,6 +36,18 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>${commons-lang3.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		
+		<!-- spring boot test -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
   </dependencies>
   <build>
@@ -43,8 +57,8 @@
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <encoding>utf-8</encoding>
-                   <source>1.7</source>
-                   <target>1.7</target>
+                   <source>${java.version}</source>
+                   <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
