--- a/ironchain-admin/src/main/resources/config/application-devel.properties
+++ b/ironchain-admin/src/main/resources/config/application-devel.properties
@@ -7,5 +7,6 @@ spring.datasource.password=111111
 #spring.datasource.password=root
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jackson.pretty-print=true
-spring.jackson.serialization.indent_output=true
+#spring.jackson.serialization.indent_output=true
