--- a/ironchain-admin/pom.xml
+++ b/ironchain-admin/pom.xml
@@ -104,5 +104,11 @@
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 		</dependency>
+		
+		<!-- 缓存 -->
+		<dependency>
+            <groupId>org.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+        </dependency>
   </dependencies>
 </project>
