--- a/ironchain-admin/src/main/resources/config/application.properties
+++ b/ironchain-admin/src/main/resources/config/application.properties
@@ -42,6 +42,8 @@ spring.output.ansi.enabled=detect
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
 # Email (MailProperties)
 #spring.mail.default-encoding=UTF-8 # Default MimeMessage encoding.
 #spring.mail.host= # SMTP server host. For instance `smtp.example.com`
