--- a/ironchain-admin/pom.xml
+++ b/ironchain-admin/pom.xml
@@ -105,6 +105,12 @@
 			<artifactId>joda-time</artifactId>
 		</dependency>
 		
+	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-devtools</artifactId>
+	        <optional>true</optional>
+	    </dependency>
+		
 		<!-- 缓存 -->
 		<dependency>
             <groupId>org.ehcache</groupId>
