--- a/ironchain-admin/src/main/resources/config/application.properties
+++ b/ironchain-admin/src/main/resources/config/application.properties
@@ -8,13 +8,19 @@ spring.main.banner-mode=off
 #server.jsp-servlet.init-parameters.trimSpaces=true
 
 # MULTIPART (MultipartProperties)
-multipart.enabled=true
-multipart.file-size-threshold=0
-multipart.max-file-size=50Mb
-multipart.max-request-size=10Mb
+spring.http.multipart.enabled=true
+# Threshold after which files will be written to disk. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
+spring.http.multipart.file-size-threshold=0
+#spring.http.multipart.location= # Intermediate location of uploaded files.
+# Max file size. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
+spring.http.multipart.max-file-size=50MB
+# Max request size. Values can use the suffixed "MB" or "KB" to indicate a Megabyte or Kilobyte size.
+spring.http.multipart.max-request-size=10MB
+# Whether to resolve the multipart request lazily at the time of file or parameter access.
+spring.http.multipart.resolve-lazily=false
 
 # FREEMARKER (FreeMarkerAutoConfiguration)
-spring.freemarker.enabled=true
+spring.freemarker.enabled=false
 spring.freemarker.cache=false
 spring.freemarker.check-template-location=true
 spring.freemarker.charset=UTF-8
